testsuite/tests/grammar/invalid_error_node/test_error_and_list.lkt
import common

class ErrorDecl : ASTList[FooNode, Example] implements ErrorNode {
}
